--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="https://cdn.bootcss.com/axios/0.17.1/axios.min.js"></script>
   <script src="https://cdn.bootcss.com/element-ui/2.0.9/index.js"></script>
   <script src="https://cdn.bootcss.com/echarts/3.8.5/echarts.min.js"></script>
+  <script type="text/javascript" src="http://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script>
 </head>
 
 <body>
