--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="Keywords" content="抱一云信系统,短信发送平台合作伙伴" />
-  <meta name="Description" content="短信服务（Short Message Service）是抱一云信为用户提供的一种通信服务的能力，支持快速发送短信验证码、短信通知等。通知短信到达率高达96%。" />
+  <meta name="Keywords" content="抱一云信系统,短信发送平台合作伙伴">
+  <meta name="Description" content="短信服务（Short Message Service）是抱一云信为用户提供的一种通信服务的能力，支持快速发送短信验证码、短信通知等。通知短信到达率高达96%。">
   <meta name="author" content="ylx&&yn">
   <title>msg-user</title>
   <link href="https://cdn.bootcss.com/element-ui/2.0.9/theme-chalk/index.css" rel="stylesheet">
@@ -15,7 +15,8 @@
   <script src="https://cdn.bootcss.com/axios/0.17.1/axios.min.js"></script>
   <script src="https://cdn.bootcss.com/element-ui/2.0.9/index.js"></script>
   <script src="https://cdn.bootcss.com/echarts/3.8.5/echarts.min.js"></script>
-  <script type="text/javascript" src="http://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script>
+  <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk.min.js" type="text/javascript"></script>
+  <script src="https://cdn.bootcss.com/bodymovin/4.13.0/bodymovin.min.js"></script>
 </head>
 
 <body>
